2008-06-25  Øyvind Kolås  <pippin@o-hand.com>

	* clutter-box2d/clutter-box2d-actor.cpp: adapt to new multiple device
	support in Clutter-0.7.

2008-06-23  Øyvind Kolås  <pippin@o-hand.com>

	* clutter-box2d/clutter-box2d-util.c: made the
	clutter_box2d_actor_track listen for changed to the allocation
	property instead of individually listening for changes to ::x and ::y,
	this fixes issues with some missed updates.

2008-06-13  Øyvind Kolås  <pippin@o-hand.com>

	* clutter-box2d/clutter-box2d-util.[ch]:
	(clutter_box2d_actor_track): made this utility call able to track
	position and|or rotation, which set of gemoetrical properties are
	being mimicked are controlled through a new final flags argument.

2008-06-12  Øyvind Kolås  <pippin@o-hand.com>

	* clutter-box2d/clutter-box2d-util.h: added a file with utility calls
	for use when building interfaces using ClutterBox2D, for now the
	ability to maintain the relative positions of two actors.
	* clutter-box2d/clutter-box2d-util.c:
	* clutter-box2d/Makefile.am: added new files.
	* clutter-box2d/clutter-box2d.h: #include "clutter-box2d-util.h"

2008-06-12  Øyvind Kolås  <pippin@o-hand.com>

	* clutter-box2d/clutter-box2d-actor.cpp: added code to cope with
	multi-touch (#if 0'd out).

2008-06-07  Øyvind Kolås  <pippin@o-hand.com>

	* clutter-box2d/clutter-box2d-actor.cpp: changed possibly unportable
	inline definitions of on stack structure.

2008-06-06  Øyvind Kolås  <pippin@o-hand.com>

	* clutter-box2d/clutter-box2d-actor.cpp: store the state for pointer
	manipulation of dynamic actors in the child-meta class, in preparation
	for multi-touch.

2008-06-06  Øyvind Kolås  <pippin@o-hand.com>

	* clutter-box2d/clutter-box2d-actor.cpp: made the manipulatable state
	work correctly by using the boolean paramspec, also keep a reference
	to the actor to avoid the actor getting destroyed.

2008-06-03  Øyvind Kolås  <pippin@o-hand.com>

	* examples/scene-table.c: (scene_table): added a test scene with zero